--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -9,6 +9,7 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 test filew counter 2
+edited after the comit and push
 @code {
     private int currentCount = 0;
 
